k8s/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: our-first-deploy
  namespace: playground-ns
  labels:
    app: our-first-deploy
spec:
  replicas: 3
  revisionHistoryLimit: 5
  template:
    metadata:
      name: our-first-deploy
      labels:
        app: our-first-deploy
    spec: 
      containers:
        - name: our-first-deploy
          image: gcr.io/erms-sandpit/helloapp:hihello
          imagePullPolicy: Always
          #envFrom:
          #- configMapRef:
          #    name: environment-variables
          ports:
          - name: web
            containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 3
