k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: our-first-service
  labels:
    app: our-first-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: our-first-deploy
    #tier: web
