k8s/ingress.yaml
# https://github.com/kubernetes/ingress-gce/blob/master/docs/annotations.md
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    namespace: playground-ns 
    name: staging-ingress
    annotations:
      kubernetes.io/ingress.class: "nginx"
  spec:
    rules:
    - host: www.otter.ly
      http:
        paths:
        - backend:
            serviceName: our-first-service
            servicePort: 80
          path: /
